fix(pagination): Improve spacing for page next and first page buttons

--- a/src/style.css
+++ b/src/style.css
@@ -527,6 +527,24 @@ pagination material-button {
   padding: 0.2em 0.75em;
 }
 
+pagination material-button .content {
+  display: flex;
+  align-content: center;
+  line-height: 1.9em;
+}
+
 pagination material-button.current {
   border: 1px solid rgba(0, 0, 0, .12);
+}
+
+pagination material-button.current.space-left {
+  margin-left: 85px;
+}
+
+pagination material-button.current.space-right {
+  margin-right: 85px;
+}
+
+pagination material-button .content i.material-icons {
+  color: #000;
 }
